@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.11 to 3.12
+* added a few perl wrappers for LDAP (Stefan Adams)
 * added note about availability of -r option to manpages (Jan Kara)
 * maximal number of groups is now got via sysconf (Nathan Scott)
 * added batch mode to the setquota(8) (Jan Kara)
